<resources>
    <string name="app_name" translatable="false">QR&amp; BarCode</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_an_user_login">Already an user? Login</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="history">History</string>
    <string name="help">Help</string>
    <string name="scan">Scan</string>
    <string name="homefragment">HomeFragment</string>
</resources>
