<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home_24"
        android:title="@string/home" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/baseline_person_24"
        android:title="@string/profile" />
    <item
        android:id="@+id/cartFragment"
        android:icon="@drawable/baseline_shopping_cart_24"
        android:title="@string/cart" />
    <item
        android:id="@+id/historyFragment"
        android:icon="@drawable/baseline_history_24"
        android:title="@string/history" />
    <item
        android:id="@+id/helpFragment"
        android:icon="@drawable/baseline_help_outline_24"
        android:title="@string/help" />
</menu>