<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <!-- Optional: Define data binding variables here if needed -->
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signUp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        tools:context=".SignUp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200dp"
            android:orientation="vertical"
            android:padding="20dp"
            tools:ignore="MissingConstraints,UselessParent">

            <!-- <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="158dp"
                android:layout_gravity="center"
                app:srcCompat="@mipmap/circle_round"
                tools:ignore="ContentDescription,ObsoleteLayoutParam" />-->

            <EditText
                android:id="@+id/First_Name"
                android:hint="First Name"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:autofillHints=""
                android:background="@drawable/lavender_border"
                android:drawableStart="@drawable/baseline_abc_24"
                android:drawablePadding="8dp"/>

            <EditText
                android:id="@+id/signup_email"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginTop="30dp"
                android:autofillHints=""
                android:background="@drawable/lavender_border"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="8dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColor="@color/black"
                android:textColorHint="#00838F" />

            <EditText
                android:id="@+id/signup_password"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="@drawable/lavender_border"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:padding="8dp" />

            <EditText
                android:id="@+id/signup_confirm"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="@drawable/lavender_border"
                android:drawableStart="@drawable/baseline_password_24"
                android:drawablePadding="8dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:padding="8dp" />

            <EditText
                android:id="@+id/Card_number"
                android:layout_width="350dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:autofillHints=""
                android:background="@drawable/lavender_border"
                android:drawableStart="@drawable/baseline_credit_card_24"
                android:drawablePadding="8dp"
                android:hint="Card Number"
                android:padding="8dp" />

            <Button
                android:id="@+id/signup_button"
                android:layout_width="320dp"
                android:layout_gravity="center"
                android:layout_height="70dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="#1976D2"
                android:text="@string/sign_up"
                android:textSize="18sp"
                app:cornerRadius="30dp" />

            <TextView
                android:id="@+id/loginRedirectText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:backgroundTint="#303F9F"
                android:padding="8dp"
                android:text="@string/already_an_user_login"
                android:textColor="#101010"
                android:textSize="18sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>